"Add Facebook Login"

--- a/app.json
+++ b/app.json
@@ -22,6 +22,8 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
-  }
+    },
+      "facebookAppId": "172417543704607"
+  },
+  "facebookScheme" : "fb172417543704607"
 }
